# C-small-projects

./: README.md
pain1/: BigInt.cpp  BigInt.h  Doxyfile  Logger.cpp  Logger.h  big_int_test.cpp
pain1/doc/html/: _big_int_8cpp.html  _big_int_8h.html  _big_int_8h_source.html  annotated.html  big__int__test_8cpp.html  class_big_int-members.html  class_big_int.html  classes.html  files.html  functions.html  functions_func.html  functions_rela.html  globals.html  globals_func.html  index.html  jquery.js  menu.js  menudata.js
pain1/doc/html/search/: all_0.js  all_2.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  related_0.js  searchdata.js
pain1/doc/latex/: _big_int_8cpp.tex  _big_int_8h.tex  _big_int_8h_source.tex  annotated.tex  big__int__test_8cpp.tex  class_big_int.tex  files.tex  refman.tex
pain2/include/Controller/: GameController.h
pain2/include/Model/: BotPlayer.h  Card.h  Deck.h  HumanPlayer.h  NormalCard.h  Player.h  UnoGame.h  WildCard.h
pain2/include/View/: GameView.h
pain2/src/: main.cpp
pain2/src/Controller/: GameController.cpp
pain2/src/Model/: BotPlayer.cpp  Deck.cpp  HumanPlayer.cpp  NormalCard.cpp  UnoGame.cpp  WildCard.cpp
pain2/src/View/: GameView.cpp
pain2/tests/: BotPlayerTest.cpp  CMakeLists.txt  DeckTest.cpp  HumanPlayerTest.cpp  NormalCardTest.cpp  UnoGameTest.cpp  WildCardTest.cpp
pain3/: decode.cpp  encode.cpp  encoded_pairs.txt
